# Autovac-algorithm

./: README.md
A2/: CMakeLists.txt  main.cpp
A2/Algorithm/: HouseManager.cpp  HouseManager.h  MyAlgorithm.cpp  MyAlgorithm.h  Utils.cpp  Utils.h  types.h
A2/Common/: AbstractAlgorithm.h  BatteryMeter.h  DirtSensor.h  WallsSensor.h  common_types.h
A2/Simulation/: BatteryMeterImpl.cpp  BatteryMeterImpl.h  DirtSensorImpl.cpp  DirtSensorImpl.h  ErrorCodes.h  FileUtils.cpp  FileUtils.h  House.cpp  House.h  RobotState.cpp  RobotState.h  Simulator.cpp  Simulator.h  Utils.cpp  Utils.h  WallsSensorImpl.cpp  WallsSensorImpl.h
A2/docs/inputs/: sample-input1.txt  sample-input2.txt  sample-input3.txt
A2/docs/outputs/: sample-output1.txt  sample-output2.txt  sample-output3.txt
